fixed timer element being on top of question grid on mobile view

--- a/app/styles/Game.css
+++ b/app/styles/Game.css
@@ -1,6 +1,5 @@
 /* this css file will be processed by webpack and css-modules, rule names must be camelCase! */
 .questionGrid {
-    height: 100%;
     width: 90%;
     margin: 40px;
     display: grid;
@@ -25,22 +24,6 @@
     width: auto;
 }
 
-@media (min-width: 640px) {
-    .title {
-        grid-column: 1/3;
-    }
-
-    .questionGrid {
-        height: 100%;
-        width: 90%;
-        margin: 40px;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: 4fr 3fr 3fr;
-        grid-gap: 15px;
-    }
-}
-
 .answerButton {
     font-size: 32px;
     font-weight: lighter;
@@ -58,4 +41,15 @@
     align-items: center;
     justify-content: center;
     margin: 20px 0;
+}
+
+@media (min-width: 640px) {
+    .title {
+        grid-column: 1/3;
+    }
+
+    .questionGrid {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 4fr 3fr 3fr;
+    }
 }
